--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.ConsoleAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} 
 log4j.appender.ConsoleAppender.filter.a=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.ConsoleAppender.filter.a.LevelMin=INFO
 log4j.appender.ConsoleAppender.filter.a.LevelMax=INFO 
-#log4j.appender.File=org.apache.log4j.RollingFileAppender
-#log4j.appender.File.file=src/test/resources/outputlog/playerTest.log
-#log4j.appender.File.layout=org.apache.log4j.PatternLayout
-#log4j.appender.File.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.File=org.apache.log4j.RollingFileAppender
+log4j.appender.File.file=src/test/resources/outputlog/playerTest.log
+log4j.appender.File.layout=org.apache.log4j.PatternLayout
+log4j.appender.File.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
